Datapack Refactor
Datapacks now use a new format.
"item" -> "item_or_tag"
"amount" -> "count"

Now supports data components.